# meta-api

./: .gitignore  Cargo.toml  docker-compose.dev.yml
src/: db.rs  main.rs
src/db/: init.rs  metadatas.rs  migrator.rs
src/db/migrator/: m20230619_000001_create_metadatas_table.rs
