[package]
name = "meta-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.96"
chrono = "0.4.26"

[dependencies.rocket]
rocket = "=0.5.0-rc.3"
features = ["json"]
