[package]
name = "meta-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.96"
chrono = "0.4.26"
dotenv = "0.15.0"
mysql = "24.0.0"
sea-orm = { version = "0.11.3", features = [ "sqlx-mysql", "runtime-tokio-rustls", "macros" ] }
sea-orm-migration = "0.11.3"

[dependencies.rocket]
rocket = "=0.5.0-rc.3"
features = ["json"]
